--- a/packages/worker/dev/wrangler.toml
+++ b/packages/worker/dev/wrangler.toml
@@ -5,7 +5,7 @@ workers_dev = true
 assets = { directory = "../../dashboard/dist/spa", binding = "ASSETS", html_handling = "auto-trailing-slash", not_found_handling = "single-page-application" }
 
 [[r2_buckets]]
-binding = 'teste'
-bucket_name = 'teste'
-preview_bucket_name = 'teste'
+binding = 'r2'
+bucket_name = 'leo'
+preview_bucket_name = 'leo'
 
